<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/full_screen"
    android:background="@color/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/twobtn_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:gravity="center_vertical"
        android:minHeight="50.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dip"
                android:text="@string/pw_old"
                android:textColor="@color/reg_word"
                android:textSize="@dimen/font_size_large" />

            <EditText
                android:id="@+id/passFix_et_pw1"
                style="@style/height_math"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@color/white"
                android:focusable="true"
                android:hint="@string/input_pw_old"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
            <ImageView
                android:id="@+id/passFix_iv_pw1"
                style="@style/wrap_content"
                android:layout_marginBottom="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/error"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dip"
                android:text="@string/pw_new"
                android:textColor="@color/reg_word"
                android:textSize="@dimen/font_size_large" />

            <EditText
                android:id="@+id/passFix_et_pw2"
                style="@style/height_math"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@color/white"
                android:hint="@string/input_pw_new"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:layout_weight="1"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
            <ImageView
                android:id="@+id/passFix_iv_pw2"
                style="@style/wrap_content"
                android:layout_marginBottom="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/error"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/passFix_btn"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@drawable/queding" />

</LinearLayout>