<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
	<include layout="@layout/twobtn_header" />
	
	<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    <LinearLayout
        style="@style/horizontal_stretch"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/share"
            android:textColor="@color/consume_word"
            android:textSize="@dimen/font_size_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:minHeight="50.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dip"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/buton_sinaweibo_normal" />

                <TextView
                    android:id="@+id/sys_txt_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/weibo_sina"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/sys_btn_sinaLink"
                    android:layout_width="50dp"
                    android:layout_height="32dip"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/shape_bg"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/consume_tv"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dip"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/buton_tencent_normal" />

                <TextView
                    android:id="@+id/sys_txt_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/weibo_tent"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/sys_btn_tentLink"
                    android:layout_width="50dp"
                    android:layout_height="32dip"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/shape_bg"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/set_link"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/account_set"
            android:textColor="@color/consume_word"
            android:textSize="@dimen/font_size_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:minHeight="50.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/sysset_pass"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/set_account"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    style="@style/wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/card_arrow"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/consume_tv"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:id="@+id/sysset_meSet"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/set_info"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    style="@style/wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/card_arrow"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/set_link"
                    android:textSize="16.0sp" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:id="@+id/sysset_applyShop"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/apply_shopUser"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    style="@style/wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/card_arrow"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/set_link"
                    android:textSize="16.0sp" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:id="@+id/sysset_applyCar"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/apply_carUser"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    style="@style/wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/card_arrow"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/set_link"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/function_set"
            android:textColor="@color/consume_word"
            android:textSize="@dimen/font_size_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:minHeight="50.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/open_sound"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <com.youle.view.SlipButton
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="-3dip"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/shape_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/clear_cache"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/other"
            android:textColor="@color/consume_word"
            android:textSize="@dimen/font_size_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:minHeight="50.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/sysset_about"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/about"
                    android:textColor="@color/set_link"
                    android:textSize="@dimen/font_size_large" />

                <View
                    style="@style/wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    style="@style/wrap_content"
                    android:layout_marginBottom="1.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@drawable/card_arrow"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Link"
                    android:textColor="@color/consume_tv"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sys_logout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/btn_cancel"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>
</LinearLayout>